--- a/app/src/main/res/layout/ophistory.xml
+++ b/app/src/main/res/layout/ophistory.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:id="@+id/recyclerviewid"></androidx.recyclerview.widget.RecyclerView>
+        android:id="@+id/recyclerviewid">
+    </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
