--- a/app/src/main/res/layout/op_row_item.xml
+++ b/app/src/main/res/layout/op_row_item.xml
@@ -107,11 +107,19 @@
             >
             <TextView
                 android:textColor="#090909"
-                android:layout_width="match_parent"
+                android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:text="Studio"
                 android:layout_marginTop="5dp"
                 android:id="@+id/rating"/>
+            <TextView
+                android:textColor="#090909"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/patientId"
+                android:text=""
+                android:textStyle="bold"
+                android:textSize="18sp"/>
 
         </LinearLayout>
 
