--- a/app/src/main/res/layout/add_patient.xml
+++ b/app/src/main/res/layout/add_patient.xml
@@ -466,7 +466,7 @@
                     app:layout_constraintStart_toStartOf="parent" />
 
                     <Button
-                        android:id="@+id/button2"
+                        android:id="@+id/reliability"
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_rowWeight="1"
